manifests/base/proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deu-proxy-deployment
spec:
  selector:
    matchLabels:
      app: deu-proxy
  template:
    metadata:
      labels:
        app: deu-proxy
    spec:
      containers:
        - env:
            - name: SPARQL_ENDPOINT
              value: http://virtuoso.fokus.svc.cluster.local:8890/sparql
            - name: WHITELIST_UPDATE_INTERVAL_MINUTES
              value: "60"
            - name: CONFIG_FILE
              value: /etc/ckan-proxy.json
            - name: LOGGING_LEVEL
              value: debug
          image: 52north/deu-proxy:latest
          imagePullPolicy: Always
          name: deu-proxy
          ports:
            - containerPort: 9090
