manifests/base/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deu-proxy-service
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: deu-proxy
