manifests/base/proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    prometheus.io/port: '10254'
    prometheus.io/scrape: 'true'
  name: 52north-ingress-proxy
spec:
  rules:
  - host: $(HOST_NAME)
    http:
      paths:
      - backend:
          service:
            name: deu-proxy-service
            port:
              number: 9090
        pathType: ImplementationSpecific
        path: /deu-proxy
